@@ -5,12 +5,18 @@ import javafx.concurrent.Task;
 import javafx.fxml.FXML;
 import javafx.scene.control.*;
 import javafx.scene.control.Alert.AlertType;
+import javafx.scene.control.TextInputDialog;
+import javafx.stage.DirectoryChooser;
 import javafx.scene.layout.*;
 import javafx.scene.shape.Arc;
 import javafx.scene.shape.ArcType;
 import javafx.animation.RotateTransition;
 import javafx.util.Duration;
 import javafx.scene.Node;
+import javafx.scene.input.DragEvent;
+import javafx.scene.input.Dragboard;
+import javafx.scene.input.TransferMode;
+import javafx.event.EventHandler;
 import java.awt.Desktop;
 import java.io.File;
 import java.net.URI;
@@ -21,65 +27,142 @@ import java.util.regex.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 
+/**
+ * MainController: The central nervous system of Brain AI.
+ * 
+ * 
+ * WHY: This class manages the multi-agent pipeline (Architect -> Coder ->
+ * 
+ * Tester -> DevOps).
+ * HOW: It uses JavaFX for the UI, Gemini for the AI, and local system commands
+ * for builds.
+ * WHAT: It handles user input, routes it to the AI, extracts generated files,
+ * and triggers local development pipelines (Vite, Javac, etc.).
+ */
+     
 public class MainController {
+     
+    // FXML bindings
+    // These link the Java code to the UI elements defined in main_scene.fxml.
+    @FXML
+    private TextArea outputArea; // The main log area.
+    @FXML
+    private TextField userInputField; // Where you type your instructions.
+    @FXML
+    private Button helloButton; // The "Send to Brain" button.
+    @FXML
+     
+    private Button openBrowserButton; // The "    " button for web previews.
+    @FXML
+    private Button settingsButton; // Opens the API key/model settings.
+    @FXML
+    private Arc spinnerArc; // The rotating circle shown during AI thought.
+    @FXML
+    private Label consultLabel; // Overlay shown when the AI is paused for your input.
 
-    // ── FXML bindings ────────────────────────────────────────────────────────
-    @FXML private TextArea   outputArea;
-    @FXML private TextField  userInputField;
-    @FXML private Button     helloButton;
-    @FXML private Button     openBrowserButton;
-    @FXML private Button     settingsButton;
-    @FXML private Arc        spinnerArc;          // CSS spinner node
-    @FXML private Label      consultLabel;        // "Agent Paused" overlay text
+    //        Consult-mode MCQ components       when the AI needs you to choose between multiple implementation options.
+    @FXML
+    private VBox consultOptionsBox; // The container for MCQ options.
+    @FXML
+    private VBox choicesBox; // Where the CheckBoxes are dynamically added.
+    @FXML
+    private TextField otherInputField; // Field for custom guidance during consult.
 
-    // ── Consult-mode MCQ components ──────────────────────────────────────────
-    @FXML private VBox       consultOptionsBox;
-    @FXML private VBox       choicesBox;
-    @FXML private TextField  otherInputField;
+    private RotateTransition spinnerAnim; // Manages the rotation animation of the spinner.
 
-    private RotateTransition spinnerAnim;
+            
+    // Project Type Constants: Used to route logic to specific agent prompts.
+    private static final String TYPE_JAVA = "JAVA"; // Standard Java Swing apps.
+    private static final String TYPE_WEB = "WEB"; // Static HTML or Node.js apps.
+    private static final String TYPE_REACT = "REACT"; // Modern React apps using Vite.
 
-    private static final String TYPE_JAVA = "JAVA";
-    private static final String TYPE_WEB  = "WEB";
+    /** All AI-generated projects are saved in this directory. */
+    private static final String PROJECTS_ROOT = System.getProperty("user.home") + File.separator + "BrainAI Projects";
 
-    /** All AI-generated projects land here. */
-    private static final String PROJECTS_ROOT =
-            System.getProperty("user.home") + File.separator + "BrainAI Projects";
-
-    // Tracks the last successfully built web project path so "Open in Browser" works
+    // Stores the path of the last web project built so the "Open Browser" button
+    // knows where to look.
     private volatile String lastWebProjectPath = null;
 
-    // ── Loop‑detection state ─────────────────────────────────────────────────
-    /** Stores hash(agentRole + outputHash) → consecutive-identical count. */
+    //        Loop   detection state  
+                                                                                                                                                             
+    /**
+            
+     * WHY: Prevents the AI from repeating the same error or output infinitely.
+     * HOW: Stores a hash of the response. If it repeats too many times, we pause
+     * and ask the user.
+     */
+            
     private final Map<String, Integer> loopCounter = new HashMap<>();
-    private static final int LOOP_THRESHOLD = 3;
+    private static final int LOOP_THRESHOLD = 3; // Maximum allowed repetitions.
 
-    // ── Pause / consult state ────────────────────────────────────────────────
+    //        Pause / consult state                                                                                                                                                 
     /**
      * When the loop detector fires, the pipeline thread blocks on
      * waitForConsult.take() until the user provides guidance.
      */
     private final java.util.concurrent.BlockingQueue<String> waitForConsult = new java.util.concurrent.LinkedBlockingQueue<>(1);
     private volatile boolean inConsultMode = false;
+            
 
-    // ── Smart-scroll state ───────────────────────────────────────────────────
-    /** True ↔ user has scrolled up and wants to read; auto-scroll is suspended. */
-    private volatile boolean userScrolledUp = false;
-
-    // ─────────────────────────────────────────────────────────────────────────
+                
+                
+                                              // 
+    //        Smart-scroll state                                                                                                                                                          
+    /** True if user has scrolled up and wants to read; auto-scroll is suspended. */
+    private boolean userScrolledUp = false;
+    //                                                                                                                                                                                                                            
     // JavaFX FXML initialize
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     @FXML
     public void initialize() {
         setupSpinner();
         setupSmartScroll();
+        setupDragAndDrop();
         if (openBrowserButton != null) openBrowserButton.setDisable(true);
         if (consultLabel != null)     consultLabel.setVisible(false);
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
-    // Spinner: rotate an Arc node in FXML continuously while AI thinks
-    // ─────────────────────────────────────────────────────────────────────────
+    /** Enables dragging a folder onto the input field or output area to load it. */
+    private void setupDragAndDrop() {
+        if (userInputField == null || outputArea == null) return;
+
+        EventHandler<DragEvent> onDragOver = event -> {
+            if (event.getGestureSource() != userInputField && event.getDragboard().hasFiles()) {
+                event.acceptTransferModes(TransferMode.COPY_OR_MOVE);
+            }
+            event.consume();
+        };
+
+        EventHandler<DragEvent> onDragDropped = event -> {
+            Dragboard db = event.getDragboard();
+            boolean success = false;
+            if (db.hasFiles()) {
+                File file = db.getFiles().get(0);
+                if (file.isDirectory()) {
+                    userInputField.setText("[LOAD: " + file.getAbsolutePath() + "] fix the issues in this project");
+                    userInputField.requestFocus();
+                    userInputField.positionCaret(userInputField.getText().length());
+                    updateUI("     [Drag&Drop] Folder loaded: " + file.getName());
+                } else {
+                    userInputField.setText("Fix the issues in this file: " + file.getAbsolutePath());
+                    updateUI("     [Drag&Drop] File detected: " + file.getName());
+                }
+                success = true;
+            }
+            event.setDropCompleted(success);
+            event.consume();
+        };
+
+        userInputField.setOnDragOver(onDragOver);
+        userInputField.setOnDragDropped(onDragDropped);
+        outputArea.setOnDragOver(onDragOver);
+        outputArea.setOnDragDropped(onDragDropped);
+    }
+
+    //                                                                                              
+                                                                                                                                       
+    // Spinner: rotate an Arc node
+    // FXML continuously while AI thinks
     private void setupSpinner() {
         if (spinnerArc == null) return;
         spinnerArc.setVisible(false);
@@ -94,15 +177,17 @@ public class MainController {
             if (spinnerArc == null) return;
             spinnerArc.setVisible(show);
             if (show) spinnerAnim.play();
-            else      spinnerAnim.stop();
+            else spinnerAnim.stop();
         });
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     // Smart Scroll: only auto-scroll when user is already at the bottom
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     private void setupSmartScroll() {
         if (outputArea == null) return;
+                
+                
         // Detect when outputArea gets its ScrollBar (after layout)
         outputArea.skinProperty().addListener((obs, o, n) -> {
             if (n == null) return;
@@ -114,7 +199,9 @@ public class MainController {
                 userScrolledUp = (newV.doubleValue() < max - 0.01);
             });
         });
+                
     }
+                
 
     /** Appends text and auto-scrolls only if user hasn't scrolled up. */
     private void updateUI(String message) {
@@ -126,9 +213,10 @@ public class MainController {
         });
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     // Loop detection
-    // ─────────────────────────────────────────────────────────────────────────
+                                
+    //                                                                                                                                                                                                                            
     /**
      * Call after each agent response.
      * Returns true if the pipeline should pause for user consultation.
@@ -137,14 +225,16 @@ public class MainController {
         String key = agentRole + "::" + Integer.toHexString(responseText.hashCode());
         int count  = loopCounter.merge(key, 1, Integer::sum);
         if (count >= LOOP_THRESHOLD) {
-            updateUI("\n🛑 ══════════════════════════════════════════════════════");
+            updateUI("\n                                                                                                                                                                       ");
             updateUI("   LOOP DETECTED: Agent [" + agentRole + "] produced the same result " + count + " times in a row.");
             updateUI("   Last error / pattern:\n" + (responseText.length() > 500 ? responseText.substring(0, 500) + "..." : responseText));
-            updateUI("   ══════════════════════════════════════════════════════\n");
+            updateUI("   --------------------------------------------------------------------------------\n");
             loopCounter.clear(); 
             return true;
         }
+                    
         return false;
+                    
     }
 
     /**
@@ -153,40 +243,48 @@ public class MainController {
      * 2. Repurpose the main input field for guidance.
      * 3. Block the pipeline thread until the user sends a message.
      *
-     * @return the user's guidance text (never null/empty)
+                
+     * @return the user's guidance text (n
+                ver null/empty)
      */
+                
     private String enterConsultMode(String agentRole, String lastError) throws InterruptedException {
         inConsultMode = true;
         waitForConsult.clear(); // Ensure queue is empty before starting a new pause
         Platform.runLater(() -> {
+                
             if (consultLabel != null) {
-                consultLabel.setText("⚠️ Agent Paused – Type guidance below and press Send to resume");
+                consultLabel.setText("       Agent Paused     Type guidance below and press Send to resume");
                 consultLabel.setVisible(true);
             }
             if (helloButton != null) helloButton.setDisable(false); // repurpose Send button
         });
 
-        // ── Header Message ──────────────────────────────────────────────────
-        updateUI("\n\n🛑 ══════════════════════════════════════════════════════");
+        //        Header Message                                                                                                                                                       
+        updateUI("\n\n                                                                                                                                                                       ");
         if (agentRole.contains("REVIEW") || agentRole.contains("CONSULT")) {
             updateUI("   AGENT PAUSED: " + agentRole);
         } else {
+        // 
             updateUI("   LOOP DETECTED: Agent [" + agentRole + "] produced the same result "
                      + LOOP_THRESHOLD + " times in a row.");
         }
         updateUI("   Last output / pattern:\n   " + (lastError.length() > 500 ? lastError.substring(0, 500) + "..." : lastError));
         updateUI("   The pipeline is PAUSED. Your execution context is preserved.");
         
-        // ── MCQ Detection ────────────────────────────────────────────────────
+        //        MCQ Detection                                                                                                                                                             
         List<String> choices = new ArrayList<>();
         Matcher m = Pattern.compile("\\[CHOICE:\\s*([^\\]]+)\\]", Pattern.CASE_INSENSITIVE).matcher(lastError);
         while (m.find()) {
             choices.add(m.group(1).trim());
         }
 
+                    
         if (!choices.isEmpty()) {
+                    
             Platform.runLater(() -> {
-                choicesBox.getChildren().clear();
+                    
+                     choicesBox.getChildren().clear(); 
                 for (String choice : choices) {
                     CheckBox cb = new CheckBox(choice);
                     choicesBox.getChildren().add(cb);
@@ -196,12 +294,13 @@ public class MainController {
                 userInputField.setVisible(false);
                 userInputField.setManaged(false);
                 otherInputField.clear();
+                
             });
-            updateUI("   👉 Select one or more options below and press Send.");
+            updateUI("        Select one or more options below and press Send.");
         } else {
-            updateUI("   👉 Type your guidance or a manual fix in the input field and press Send.");
+            updateUI("        Type your guidance or a manual fix in the input field and press Send.");
         }
-        updateUI("══════════════════════════════════════════════════════════\n");
+        updateUI("                                                                                                                                                                              \n");
 
         showSpinner(false);
         // Block this pipeline thread until the user sends input
@@ -214,31 +313,37 @@ public class MainController {
             consultOptionsBox.setManaged(false);
             userInputField.setVisible(true);
             userInputField.setManaged(true);
+            
+            
         });
-        updateUI("▶️  Resuming pipeline with guidance: " + guidance + "\n");
+        updateUI("        Resuming pipeline with guidance: " + guidance + "\n");
         return guidance;
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
-    // Resilient AI caller — retries forever on 429/503/500; pauses on loops.
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
+    // Resilient AI caller     retries forever on 429/503/500; pauses on loops.
+    //                                                                                                                                                                                                                            
     private String askAgentResilient(GeminiService gemini, String agentRole,
                                      String prompt, String context)
-            throws InterruptedException {
+            throws InterruptedException { 
         int attempt = 0;
-
+                            
+ 
         while (true) {
             attempt++;
             showSpinner(true);
 
             String result;
+                
             try {
                 result = gemini.askAgent(prompt, context);
             } catch (IllegalStateException e) {
                 // Fatal: no API key configured or all keys permanently invalid
                 showSpinner(false);
+            
+            
                 updateUI("\n\uD83D\uDD34 FATAL: " + e.getMessage());
-                updateUI("   → Open ⚙️ Settings and paste a valid Gemini API key, then try again.");
+                updateUI("       Open        Settings and paste a valid Gemini API key, then try again.");
                 // Propagate as a RuntimeException so the pipeline catches it and stops
                 throw new RuntimeException("NO_API_KEY: " + e.getMessage(), e);
             }
@@ -246,19 +351,23 @@ public class MainController {
             showSpinner(false);
 
             if (result == null || result.isBlank()) {
-                updateUI("⚠️ [" + agentRole + "] Empty response — retrying...");
+                updateUI("       [" + agentRole + "] Empty response      retrying...");
                 continue;
             }
 
-            // ── Fatal API-key error returned as a string (backward compat) ──────
+                    
+            // Fatal API-key error returned as a string (backward compat)
             boolean isNoKey = result.contains("No Gemini API key configured")
                            || result.contains("No Gemini API keys configured")
-                           || result.contains("All API keys are invalid");
+                           || result.contains("API Key");
             if (isNoKey) {
-                updateUI("\n\uD83D\uDD34 FATAL: API key missing or all keys are invalid.");
-                updateUI("   → Open ⚙️ Settings and paste your Gemini API key, then try again.");
+                updateUI("\n🔴 FATAL: API key missing or all keys are invalid.");
+                updateUI("       Open        Settings and paste your Gemini API key, then try again.");
                 throw new RuntimeException("NO_API_KEY: " + result);
             }
+                            
+                
+                            
 
             if (!result.startsWith("AI communication failed")) {
                 // Check for loop BEFORE returning
@@ -268,6 +377,7 @@ public class MainController {
                     loopCounter.clear();
                     continue;
                 }
+            
                 return result;
             }
 
@@ -276,30 +386,36 @@ public class MainController {
                                  || result.contains("overloaded");
 
             if (isRateLimit || isServerError) {
-                long waitMs = isRateLimit ? 65_000L
-                        : (long) Math.pow(2, Math.min(attempt, 6)) * 1000L;
+            
+                long waitMs = isRateLimit ? 30000L : (long) Math.pow(2, Math.min(attempt, 6)) * 1000L;
                 java.util.regex.Matcher m = java.util.regex.Pattern
+                            
                         .compile("retry in ([\\d\\.]+)s").matcher(result);
                 if (m.find()) {
                     try { waitMs = (long)(Double.parseDouble(m.group(1)) * 1000) + 2000; }
                     catch (NumberFormatException ignored) {}
                 }
                 final long fw = waitMs;
-                updateUI("⏳ [Rate Limit] Attempt " + attempt + " failed. Waiting "
+                updateUI("    [Rate Limit] Attempt " + attempt + " failed. Waiting "
                         + (fw / 1000) + "s before retrying...");
                 Thread.sleep(waitMs);
             } else {
                 // Genuine non-retryable error (e.g. bad request, SSL issue)
+                            
                 updateUI("\u274C [Non-retryable AI Error]: " + result);
+                            
                 throw new RuntimeException("NON_RETRYABLE: " + result);
             }
         }
     }
+                            
 
-    // ─────────────────────────────────────────────────────────────────────────
+                        
+    //                                                                                                                                                                                                                            
     // Parallel coding: dispatch multiple sub-tasks simultaneously
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     /**
+            
      * Splits the coder context by [SUBTASK] tags from the Architect (if present)
      * and runs them simultaneously using a thread pool matching the key count.
      *
@@ -310,7 +426,7 @@ public class MainController {
         // Split by [SUBTASK n] markers the Architect may emit
         String[] parts = fullContext.split("(?=\\[SUBTASK\\s*\\d+\\])");
         if (parts.length <= 1) {
-            // No sub-tasks — plain sequential call
+            // No sub-tasks     plain sequential call
             return askAgentResilient(gemini, "PARALLEL_CODER", coderPrompt, fullContext);
         }
 
@@ -318,10 +434,13 @@ public class MainController {
         ExecutorService pool = Executors.newFixedThreadPool(poolSize);
         List<Future<String>> futures = new ArrayList<>();
 
-        updateUI("🔀 [Parallel Coder] Dispatching " + parts.length + " sub-tasks on "
+            
+        updateUI("     [Parallel Coder] Dispatching " + parts.length + " sub-tasks on "
                 + poolSize + " threads...");
 
         for (String subtaskCtx : parts) {
+        
+    
             if (subtaskCtx.trim().isEmpty()) continue;
             final String ctx = subtaskCtx;
             futures.add(pool.submit(() -> {
@@ -337,25 +456,29 @@ public class MainController {
         for (Future<String> f : futures) {
             try { combined.append(f.get()).append("\n"); }
             catch (ExecutionException e) {
-                updateUI("⚠️ [Parallel sub-task failed]: " + e.getCause().getMessage());
+                updateUI("       [Parallel sub-task failed]: " + e.getCause().getMessage());
             }
         }
         return combined.toString();
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     // Project-type detection
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     private String detectProjectType(String architectPlan) {
         Matcher m = Pattern.compile("\\[TYPE:\\s*(\\w+)\\]",
                 Pattern.CASE_INSENSITIVE).matcher(architectPlan);
-        if (m.find() && m.group(1).toUpperCase().equals(TYPE_WEB)) return TYPE_WEB;
+        if (m.find()) {
+            String type = m.group(1).toUpperCase();
+            if (type.equals(TYPE_WEB)) return TYPE_WEB;
+            if (type.equals(TYPE_REACT)) return TYPE_REACT;
+        }
         return TYPE_JAVA;
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     // UI button handlers
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     @FXML
     protected void onHelpButtonClick() {
         Alert alert = new Alert(AlertType.INFORMATION);
@@ -368,9 +491,28 @@ public class MainController {
                 + "Node example: 'Create a Node.js REST API with Express for a book list'\n\n"
                 + "The Architect auto-detects the type. The correct Coder,\n"
                 + "Tester, and DevOps agents then run automatically.\n\n"
-                + "After a web build, click '🌐' to preview it.\n\n"
-                + "💡 TIP: Add multiple API keys in Settings for faster parallel processing!");
+                + "After a web build, click '    ' to preview it.\n\n"
+                + "     TIP: Add multiple API keys in Settings for faster parallel processing!");
         alert.showAndWait();
+    }
+
+    @FXML
+    protected void onLoadProjectButtonClick() {
+        javafx.stage.DirectoryChooser directoryChooser = new javafx.stage.DirectoryChooser();
+        directoryChooser.setTitle("Select Brain AI Project Folder");
+        
+        File defaultDirectory = new File(PROJECTS_ROOT);
+        if (defaultDirectory.exists()) {
+            directoryChooser.setInitialDirectory(defaultDirectory);
+        }
+
+        File selectedDirectory = directoryChooser.showDialog(userInputField.getScene().getWindow());
+        
+        if (selectedDirectory != null) {
+            userInputField.setText("[LOAD: " + selectedDirectory.getAbsolutePath() + "] ");
+            userInputField.requestFocus();
+            userInputField.positionCaret(userInputField.getText().length());
+        }
     }
 
     @FXML
@@ -379,22 +521,22 @@ public class MainController {
         lastWebProjectPath = null;
         loopCounter.clear();
         userScrolledUp = false;
-        updateUI("🚀 Engine cleared and ready...\n");
+        updateUI("     Engine cleared and ready...\n");
         if (openBrowserButton != null) openBrowserButton.setDisable(true);
     }
 
     /** Available Gemini models shown in the Settings dropdown. */
     private static final String[][] GEMINI_MODELS = {
-        {"gemini-3-flash-preview", "Gemini 3 Flash Preview (Latest & Fastest) ⚡"},
-        {"gemini-2.0-flash",       "Gemini 2.0 Flash (Advanced) 🧠"},
-        {"gemini-1.5-flash",       "Gemini 1.5 Flash (Stable/Fast) 🔧"},
-        {"gemini-1.5-pro",         "Gemini 1.5 Pro (Highest Quality) 💎"},
+        {"gemini-3-flash-preview", "Gemini 3 Flash Preview (Latest & Fastest)    "},
+        {"gemini-2.0-flash",       "Gemini 2.0 Flash (Advanced)     "},
+        {"gemini-1.5-flash",       "Gemini 1.5 Flash (Stable/Fast)     "},
+        {"gemini-1.5-pro",         "Gemini 1.5 Pro (Highest Quality)     "},
     };
 
     @FXML
     protected void onSettingsButtonClick() {
         Dialog<javafx.util.Pair<String, String>> dlg = new Dialog<>();
-        dlg.setTitle("Brain AI — Settings");
+        dlg.setTitle("Brain AI     Settings");
         dlg.setHeaderText("Configure API Keys and Model.\nAdd multiple keys separated by commas for parallel processing.");
 
         ButtonType saveBtn = new ButtonType("Save", ButtonBar.ButtonData.OK_DONE);
@@ -404,7 +546,7 @@ public class MainController {
         box.setPadding(new javafx.geometry.Insets(20));
         box.setMinWidth(500);
 
-        // ── API Keys ─────────────────────────────────────────────────────────
+        //        API Keys                                                                                                                                                                            
         Label keyLbl = new Label("Gemini API Keys (comma-separated for multiple keys):");
         keyLbl.setStyle("-fx-font-weight: bold;");
         // Show current keys from manager, or fall back to system property
@@ -425,14 +567,14 @@ public class MainController {
             } catch (Exception ignored) {}
         });
 
-        // ── Key Status ────────────────────────────────────────────────────────
+        //        Key Status                                                                                                                                                                         
         Label statusLbl = new Label("Key Pool Status:");
         statusLbl.setStyle("-fx-font-weight: bold;");
         Label statusVal = new Label(APIKeyManager.getInstance().getStatusSummary());
         statusVal.setStyle("-fx-font-size: 11px; -fx-text-fill: #333;");
         statusVal.setWrapText(true);
 
-        // ── Model selector ────────────────────────────────────────────────────
+        //        Model selector                                                                                                                                                             
         Label modelLbl = new Label("Gemini Model:");
         modelLbl.setStyle("-fx-font-weight: bold;");
         javafx.scene.control.ComboBox<String> modelBox = new javafx.scene.control.ComboBox<>();
@@ -491,10 +633,10 @@ public class MainController {
                 try (java.io.FileOutputStream out = new java.io.FileOutputStream(cf)) {
                     props.store(out, "Brain AI Configuration");
                 }
-                updateUI("✅ Settings saved. Keys: " + APIKeyManager.getInstance().getKeyCount()
+                updateUI("    Settings saved. Keys: " + APIKeyManager.getInstance().getKeyCount()
                         + " | Model: " + model);
             } catch (Exception e) {
-                updateUI("⚠️ Settings applied but could not save to file: " + e.getMessage());
+                updateUI("       Settings applied but could not save to file: " + e.getMessage());
             }
         });
     }
@@ -502,25 +644,25 @@ public class MainController {
     @FXML
     protected void onOpenBrowserButtonClick() {
         if (lastWebProjectPath == null) {
-            updateUI("⚠️ No web project built yet.");
+            updateUI("       No web project built yet.");
             return;
         }
         try {
             File indexFile = new File(lastWebProjectPath, "index.html");
             if (!indexFile.exists()) {
-                updateUI("⚠️ index.html not found at: " + lastWebProjectPath);
+                updateUI("       index.html not found at: " + lastWebProjectPath);
                 return;
             }
             Desktop.getDesktop().browse(indexFile.toURI());
-            updateUI("🌐 Opened in browser: " + indexFile.getAbsolutePath());
+            updateUI("     Opened in browser: " + indexFile.getAbsolutePath());
         } catch (Exception e) {
-            updateUI("⚠️ Could not open browser: " + e.getMessage());
+            updateUI("       Could not open browser: " + e.getMessage());
         }
     }
 
     @FXML
     protected void onHelloButtonClick() {
-            // ── "Send" while in consult mode → resume the paused pipeline ──────
+        // --- Consult Mode Logic ---
         if (inConsultMode) {
             StringBuilder guidance = new StringBuilder();
             
@@ -544,7 +686,7 @@ public class MainController {
                 guidance.append(other);
             }
 
-            // 3. Fallback: also check the main userInputField just in case it's visible or has text
+            // 3. Fallback: check main input field
             String mainText = userInputField.getText().trim();
             if (!mainText.isEmpty() && !mainText.equals(other)) {
                 if (guidance.length() > 0) guidance.append(" | Input: ");
@@ -553,103 +695,190 @@ public class MainController {
 
             String finalGuidance = guidance.toString().trim();
             if (finalGuidance.isEmpty()) {
-                updateUI("⚠️ Please select an option or type your guidance first.");
+                updateUI("       Please select an option or type your guidance first.");
                 return;
             }
             
-            // UI cleanup
             userInputField.clear();
             otherInputField.clear();
-            updateUI("▶️ Sending guidance to Brain...");
+            updateUI("       Sending guidance to Brain...");
 
             Platform.runLater(() -> {
                 if (helloButton != null) helloButton.setDisable(true);
             });
 
-            // Timed handoff to avoid freezing the UI if the pipeline thread is stuck
             try {
-                // Clear any stale entries just in case, then offer the new one
                 waitForConsult.clear();
                 boolean sent = waitForConsult.offer(finalGuidance, 5, java.util.concurrent.TimeUnit.SECONDS);
                 if (!sent) {
-                    updateUI("⚠️ Brain is busy or not responding (timeout). Please try again.");
+                    updateUI("       Brain is busy or not responding (timeout). Please try again.");
                     Platform.runLater(() -> { if (helloButton != null) helloButton.setDisable(false); });
-                } else {
-                    // Success: pipeline thread has been signaled (or will be soon)
-                    // Note: helloButton stays disabled while pipeline resumes
                 }
-            } catch (InterruptedException ignored) {
-                Thread.currentThread().interrupt();
-            }
+            } catch (InterruptedException ignored) {}
             return;
         }
 
-        // ── Normal "send task" flow ──────────────────────────────────────────
-        String userTask = userInputField.getText();
-        if (userTask == null || userTask.trim().isEmpty()) {
-            updateUI("⚠️ Please type a task first.");
-            return;
-        }
-
-        outputArea.setText("🚀 Starting AI Assembly Line...\n\n");
-        userScrolledUp = false;
-        loopCounter.clear();
+        // --- Start New Pipeline ---
+        final String rawInput = userInputField.getText().trim();
+        if (rawInput.isEmpty()) return;
         userInputField.clear();
-        if (helloButton != null)       helloButton.setDisable(true);
-        if (openBrowserButton != null) openBrowserButton.setDisable(true);
+
+        // Parse LOAD and NAME commands
+        String tempUserTask = rawInput;
+        String tempLoadedPath = null;
+        String tempUserChosenName = null;
+
+        Matcher loadMatcher = Pattern.compile("\\[LOAD:\\s*(.*?)\\]", Pattern.CASE_INSENSITIVE).matcher(rawInput);
+        if (loadMatcher.find()) {
+            tempLoadedPath = loadMatcher.group(1).trim();
+            tempUserTask = rawInput.replace(loadMatcher.group(0), "").trim();
+        }
+        Matcher nameMatcher = Pattern.compile("\\[NAME:\\s*(.*?)\\]", Pattern.CASE_INSENSITIVE).matcher(rawInput);
+        if (nameMatcher.find()) {
+            tempUserChosenName = nameMatcher.group(1).trim();
+            tempUserTask = tempUserTask.replace(nameMatcher.group(0), "").trim();
+        }
+
+        // If no name was provided and we aren't loading an existing project, ask the user
+        if (tempUserChosenName == null && tempLoadedPath == null) {
+            TextInputDialog dialog = new TextInputDialog("MyNewProject");
+            dialog.setTitle("New Project");
+            dialog.setHeaderText("Name your project folder");
+            dialog.setContentText("Please enter a name for the project directory:");
+            
+            java.util.Optional<String> result = dialog.showAndWait();
+            if (result.isPresent() && !result.get().trim().isEmpty()) {
+                tempUserChosenName = result.get().trim();
+            }
+        }
+
+        final String finalUserTask = tempUserTask;
+        final String finalLoadedPath = tempLoadedPath;
+        final String finalUserChosenName = tempUserChosenName;
+
+        helloButton.setDisable(true);
+        showSpinner(true);
 
         Task<Void> pipelineTask = new Task<Void>() {
             @Override
             protected Void call() throws Exception {
+                DatabaseConnection db = new DatabaseConnection();
+                GeminiService gemini = new GeminiService();
+                int projectId = db.createAutoProject(finalUserTask);
+                String contextInjection = "";
+                String projectPathStr = null;
+                String folderNameStr = null;
+
                 try {
-                    DatabaseConnection db     = new DatabaseConnection();
-                    GeminiService      gemini = new GeminiService();
+                    if (finalLoadedPath != null) {
+                        Path loadedPath = Paths.get(finalLoadedPath);
+                        if (Files.exists(loadedPath) && Files.isDirectory(loadedPath)) {
+                            projectPathStr = loadedPath.toAbsolutePath().normalize().toString();
+                            folderNameStr = loadedPath.getFileName().toString();
+                            updateUI("     [Load Project] Read existing files from: " + projectPathStr);
+                            
+                            boolean isSelfUpgrade = folderNameStr.toLowerCase().contains("brain") || Files.exists(Paths.get(projectPathStr, "BRAIN_AI_CONTEXT.md"));
+                            if (isSelfUpgrade) {
+                                updateUI("     [Self-Evolution] Brain AI workspace detected!");
+                                String contextFile = "";
+                                Path ctxPath = Paths.get(projectPathStr, "BRAIN_AI_CONTEXT.md");
+                                if (Files.exists(ctxPath)) {
+                                     contextFile = Files.readString(ctxPath);
+                                }
+                                contextInjection = "\n\n*** SELF-EVOLUTION MODE ***\n"
+                                    + "You are modifying YOUR OWN SOURCE CODE.\n"
+                                    + contextFile + "\n"
+                                    + "You have full permission to modify the UI (main_scene.fxml, style.css) and all Java classes EXCEPT DatabaseConnection.java.\n"
+                                    + "EXISTING FILES:\n" + getProjectFilesContext(projectPathStr);
+                            } else {
+                                String existingFiles = getProjectFilesContext(projectPathStr);
+                                contextInjection = "\n\nEXISTING PROJECT FILES:\n" + existingFiles + "\n"
+                                    + "IMPORTANT: Please modify these existing files to fulfill the task.";
+                            }
+                        } else {
+                            updateUI("       [Load Project] Invalid directory: " + finalLoadedPath + " - starting fresh.");
+                        }
+                    }
 
-                    int projectId = db.createAutoProject(userTask);
-                    updateUI("🆔 Project ID: " + projectId);
+                    if (projectPathStr == null) {
+                        if (finalUserChosenName != null) {
+                            folderNameStr = finalUserChosenName;
+                        } else {
+                            folderNameStr = "Task_" + System.currentTimeMillis();
+                        }
+                        projectPathStr = PROJECTS_ROOT + File.separator + folderNameStr;
+                    }
 
-                    // ── 1. ARCHITECT ──────────────────────────────────────────
-                    updateUI("\n🏗️ [Architect] Analyzing task...");
+                    final String currentProjectPath = projectPathStr;
+                    final String currentFolderName = folderNameStr;
+
+                    // 1. ARCHITECT
+                    updateUI("\n        [Architect] Analyzing task...");
                     String architectPrompt = DatabaseConnection.getPromptByRole("ARCHITECT");
-                    String architectPlan   = askAgentResilient(gemini, "ARCHITECT",
-                                                              architectPrompt, userTask);
+                    String architectTask = finalUserTask + contextInjection;
+                    String architectPlan = askAgentResilient(gemini, "ARCHITECT", architectPrompt, architectTask);
                     updateUI("--- ARCHITECT'S PLAN ---\n" + architectPlan + "\n");
                     db.saveMessage(projectId, "ARCHITECT", architectPlan);
 
-                    // ── 1b. CONSULTATION (User Approval/Choice) ─────────────
-                    updateUI("\n⏳ [Consultation] Please review the Architect's plan above.");
+                    // 1b. CONSULTATION
+                    updateUI("\n    [Consultation] Please review the Architect's plan above.");
                     updateUI("   Choose an option, provide feedback, or type 'Proceed' to start coding.");
                     String userGuidance = enterConsultMode("ARCHITECT_REVIEW", architectPlan);
-                    updateUI("✅ [Consultation] Guidance received: " + userGuidance);
-                    
-                    // ── 1c. REFINEMENT (Architect "thinks" and finalizes) ────────
+                    updateUI("    [Consultation] Guidance received: " + userGuidance);
+
+                    // 1c. REFINEMENT
                     if (!userGuidance.equalsIgnoreCase("continue") && !userGuidance.equalsIgnoreCase("proceed")) {
-                        updateUI("\n🤔 [Architect] Refining plan based on your guidance...");
+                        updateUI("\n     [Architect] Refining plan based on your guidance...");
                         String refinePrompt = architectPrompt + "\n\n"
                             + "The user has provided guidance/choices for your initial plan.\n"
                             + "Incorporate this feedback and produce a FINAL, COMPLETE technical plan.\n"
                             + "The coder will follow this final plan exactly. No more questions.";
-                        String refineContext = "Original Task: " + userTask + "\n\n"
+                        String refineContext = "Original Task: " + finalUserTask + "\n\n"
                             + "Initial Plan:\n" + architectPlan + "\n\n"
                             + "User Guidance:\n" + userGuidance;
-                        
                         architectPlan = askAgentResilient(gemini, "ARCHITECT", refinePrompt, refineContext);
                         updateUI("--- REFINED ARCHITECT'S PLAN ---\n" + architectPlan + "\n");
                         db.saveMessage(projectId, "ARCHITECT_REFINED", architectPlan);
                     } else {
-                        updateUI("➡️ [Consultation] Proceeding with original plan.");
+                        updateUI("       [Consultation] Proceeding with original plan.");
                     }
 
                     String projectType = detectProjectType(architectPlan);
-                    updateUI("🔖 Project type: " + projectType);
+                    updateUI("     Project type: " + projectType);
 
-                    // ── 2. CODER (parallel if sub-tasks present) ──────────────
-                    String coderRole    = projectType.equals(TYPE_WEB) ? "WEB_CODER" : "CODER";
-                    String coderContext = projectType.equals(TYPE_WEB)
-                            ? buildWebCoderContext(userTask, architectPlan)
-                            : buildJavaCoderContext(userTask, architectPlan);
+                    // 1.5 VITE PRE-INITIALIZATION
+                    if (projectType.equals(TYPE_REACT) && finalLoadedPath == null) {
+                        Files.createDirectories(Paths.get(currentProjectPath));
+                        updateUI("    [Vite] Pre-initializing React project in: " + currentProjectPath);
+                        boolean isWindows = System.getProperty("os.name").toLowerCase().contains("win");
+                        try {
+                            if (isWindows) {
+                                runCmd(currentProjectPath, "cmd", "/c", "npm", "create", "vite@latest", ".", "--yes", "--", "--template", "react");
+                            } else {
+                                runCmd(currentProjectPath, "npm", "create", "vite@latest", ".", "--yes", "--", "--template", "react");
+                            }
+                            updateUI("    [Vite] Boilerplate generated successfully.");
+                            String viteFiles = getProjectFilesContext(currentProjectPath);
+                            contextInjection += "\n\nEXISTING VITE FILES (MODIFY THESE):\n" + viteFiles + "\n"
+                                + "IMPORTANT: Please modify the existing Vite boilerplate files (like src/App.jsx, src/index.css, package.json). DO NOT write react-scripts.";
+                        } catch (Exception e) {
+                            updateUI("       [Vite] Failed to pre-initialize: " + e.getMessage());
+                        }
+                    }
 
-                    updateUI("💻 [Coder/" + projectType + "] Writing code"
+                    // 2. CODER
+                    String coderRole = projectType.equals(TYPE_REACT) ? "REACT_CODER"
+                                     : (projectType.equals(TYPE_WEB) ? "WEB_CODER" : "CODER");
+                    String coderContext;
+                    if (projectType.equals(TYPE_REACT)) {
+                        coderContext = buildReactCoderContext(finalUserTask, architectPlan) + contextInjection;
+                    } else if (projectType.equals(TYPE_WEB)) {
+                        coderContext = buildWebCoderContext(finalUserTask, architectPlan) + contextInjection;
+                    } else {
+                        coderContext = buildJavaCoderContext(finalUserTask, architectPlan) + contextInjection;
+                    }
+
+                    updateUI("     [" + coderRole + "] Writing code"
                             + (APIKeyManager.getInstance().getKeyCount() > 1 ? " (parallel mode)..." : "..."));
                     String coderPrompt = DatabaseConnection.getPromptByRole(coderRole);
                     String coderCode;
@@ -660,54 +889,51 @@ public class MainController {
                     }
 
                     if (coderCode.startsWith("AI communication failed")) {
-                        updateUI("\n❌ CRITICAL ERROR (non-retryable): " + coderCode);
+                        updateUI("\n    CRITICAL ERROR (non-retryable): " + coderCode);
                         return null;
                     }
                     updateUI("--- CODER'S OUTPUT ---\n" + coderCode + "\n");
                     db.saveMessage(projectId, "CODER", coderCode);
 
-                    // Folder & extraction
-                    String folderName  = "Task_" + System.currentTimeMillis();
-                    String projectPath = PROJECTS_ROOT + File.separator + folderName;
-                    Files.createDirectories(Paths.get(projectPath));
-                    updateUI("📁 Project Folder: " + projectPath);
-                    extractAndCreateFiles(coderCode, folderName);
+                    if (finalLoadedPath == null) {
+                        Files.createDirectories(Paths.get(currentProjectPath));
+                    }
+                    updateUI("     Project Folder: " + currentProjectPath);
+                    extractAndCreateFiles(coderCode, currentProjectPath, projectType);
 
-                    // ── 3. TESTER ─────────────────────────────────────────────
-                    updateUI("\n🔍 [Tester] Reviewing code...");
-                    String testerPrompt  = DatabaseConnection.getPromptByRole("TESTER");
+                    // 3. TESTER
+                    updateUI("\n     [Tester] Reviewing code...");
+                    String testerPrompt = DatabaseConnection.getPromptByRole("TESTER");
                     String testerContext = "PROJECT TYPE: " + projectType + "\n\n" + coderCode;
-                    String testerReview  = askAgentResilient(gemini, "TESTER",
-                                                             testerPrompt, testerContext);
+                    String testerReview = askAgentResilient(gemini, "TESTER", testerPrompt, testerContext);
                     updateUI("--- TESTER'S REVIEW ---\n" + testerReview);
                     db.saveMessage(projectId, "TESTER", testerReview);
 
                     if (testerReview.contains("[FILE:")) {
-                        extractAndCreateFiles(testerReview, folderName);
+                        extractAndCreateFiles(testerReview, currentProjectPath, projectType);
                     } else {
-                        updateUI("⚠️ [Tester] No file blocks — keeping Coder's output.");
+                        updateUI("       [Tester] No file blocks     keeping Coder's output.");
                     }
 
-                    // ── 4. DEVOPS ─────────────────────────────────────────────
+                    // 4. DEVOPS
                     String finalCode = testerReview.contains("[FILE:") ? testerReview : coderCode;
-                    if (projectType.equals(TYPE_WEB)) {
-                        runWebPipeline(folderName, projectPath, finalCode, db, gemini, projectId);
-                        lastWebProjectPath = projectPath;
+                    if (projectType.equals(TYPE_WEB) || projectType.equals(TYPE_REACT)) {
+                        runWebPipeline(currentProjectPath, currentProjectPath, finalCode, db, gemini, projectId);
+                        lastWebProjectPath = currentProjectPath;
                         Platform.runLater(() -> {
                             if (openBrowserButton != null) openBrowserButton.setDisable(false);
                         });
+                        autoStartWebServer(currentProjectPath, projectType);
                     } else {
-                        runJavaPipeline(folderName, projectPath, finalCode, db, gemini, projectId);
+                        runJavaPipeline(currentProjectPath, currentProjectPath, finalCode, db, gemini, projectId);
                     }
 
-                    // ── 5. README ─────────────────────────────────────────────
-                    generateReadme(gemini, db, projectId, projectPath, projectType,
-                                   userTask, architectPlan);
-
-                    updateUI("\n✨ ENTIRE PIPELINE COMPLETE!");
+                    // 5. README
+                    generateReadme(gemini, db, projectId, currentProjectPath, projectType, finalUserTask, architectPlan);
+                    updateUI("\n    ENTIRE PIPELINE COMPLETE!");
 
                 } catch (Exception e) {
-                    updateUI("\n❌ Pipeline failed: " + e.getMessage());
+                    updateUI("\n    Pipeline failed: " + e.getMessage());
                     e.printStackTrace();
                 } finally {
                     showSpinner(false);
@@ -718,20 +944,19 @@ public class MainController {
                 return null;
             }
         };
-
         Thread t = new Thread(pipelineTask);
         t.setDaemon(true);
         t.start();
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     // README generation
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     private void generateReadme(GeminiService gemini, DatabaseConnection db, int projectId,
                                 String projectPath, String projectType,
                                 String userTask, String architectPlan)
             throws Exception {
-        updateUI("\n📝 [DevOps] Generating README...");
+        updateUI("\n     [DevOps] Generating README...");
         String devopsPrompt  = DatabaseConnection.getPromptByRole("DEVOPS");
         String readmeContext =
             "PROJECT TYPE: " + projectType + "\n"
@@ -749,12 +974,12 @@ public class MainController {
         Path readmePath = Paths.get(projectPath, "README.md");
         Files.writeString(readmePath, readmeContent);
         db.saveMessage(projectId, "DEVOPS", readmeContent);
-        updateUI("📄 README.md written to: " + readmePath);
+        updateUI("     README.md written to: " + readmePath);
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     // Context builders
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     private String buildJavaCoderContext(String userTask, String architectPlan) {
         return "Task: " + userTask + "\nPlan:\n" + architectPlan
             + "\nIMPORTANT: Use [FILE: path/to/Name.java] and [ENDFILE] tags. DO NOT use markdown."
@@ -765,7 +990,7 @@ public class MainController {
             + "\n- Consumer<Void> lambdas: use (Void v) -> { ... } not () -> { ... }."
             + "\n- Import javax.swing.tree.ExpandVetoException where needed."
             + "\n- Import java.awt.Image in any file using Image."
-            + "\n- JOptionPane 7-arg showInputDialog returns Object — cast to String."
+            + "\n- JOptionPane 7-arg showInputDialog returns Object     cast to String."
             + "\n- Provide FULL class definitions ready to compile.";
     }
 
@@ -781,9 +1006,17 @@ public class MainController {
             + "\n- Provide production-ready code, not placeholders.";
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    private String buildReactCoderContext(String userTask, String architectPlan) {
+        return "Task: " + userTask + "\nPlan:\n" + architectPlan
+            + "\nIMPORTANT: Use [FILE: Name.ext] and [ENDFILE] tags. DO NOT use markdown."
+            + "\n- You MUST create all Vite boilerplate files: package.json, vite.config.js, index.html, src/main.jsx, src/App.jsx, and CSS."
+            + "\n- In package.json, ensure scripts include 'dev': 'vite --open'."
+            + "\n- Provide production-ready React code.";
+    }
+
+    //                                                                                                                                                                                                                            
     // Web DevOps pipeline
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     private void runWebPipeline(String folderName, String projectPath, String code,
                                 DatabaseConnection db, GeminiService gemini, int projectId)
             throws Exception {
@@ -796,17 +1029,17 @@ public class MainController {
             attempt++;
             final int fa = attempt;
             try {
-                updateUI("\n🌐 [Web DevOps] Validation attempt " + fa + "...");
+                updateUI("\n     [Web DevOps] Validation attempt " + fa + "...");
                 runWebValidation(projectPath);
                 success = true;
-                updateUI("✅ Web project validated on attempt " + attempt + ".");
-                updateUI("📂 Project ready at: " + projectPath);
+                updateUI("    Web project validated on attempt " + attempt + ".");
+                updateUI("     Project ready at: " + projectPath);
             } catch (Exception err) {
                 if (attempt >= maxAttempts) {
-                    updateUI("\n❌ Max web repair attempts reached.");
+                    updateUI("\n    Max web repair attempts reached.");
                     throw err;
                 }
-                updateUI("\n🔧 [Web Repair] Issue found. Asking AI to fix...");
+                updateUI("\n     [Web Repair] Issue found. Asking AI to fix...");
 
                 String projectCtx   = getProjectFilesContext(projectPath);
                 String repairContext =
@@ -819,19 +1052,19 @@ public class MainController {
                         DatabaseConnection.getPromptByRole("TESTER"), repairContext);
 
                 if (!repairCode.contains("[FILE:")) {
-                    updateUI("⚠️ [Web Repair Guard]: No file blocks. Retrying...");
+                    updateUI("       [Web Repair Guard]: No file blocks. Retrying...");
                     continue;
                 }
                 db.saveMessage(projectId, "WEB_REPAIR_" + attempt, repairCode);
-                if (extractAndCreateFiles(repairCode, folderName)) {
-                    updateUI("\n🛠️ [Web Repair Applied]: Retrying validation...");
+                if (extractAndCreateFiles(repairCode, projectPath, TYPE_WEB)) {
+                    updateUI("\n        [Web Repair Applied]: Retrying validation...");
                 }
             }
         }
     }
 
     private void runWebValidation(String projectPath) throws Exception {
-        updateUI("\n🌐 [Web DevOps] Validating web project...");
+        updateUI("\n     [Web DevOps] Validating web project...");
 
         Path indexHtml = null;
         for (String candidate : new String[]{"index.html", "public/index.html"}) {
@@ -854,7 +1087,7 @@ public class MainController {
         }
 
         if (indexHtml != null) {
-            updateUI("✅ index.html found: " + indexHtml);
+            updateUI("    index.html found: " + indexHtml);
             String  html       = Files.readString(indexHtml);
             Path    publicDir  = Paths.get(projectPath, "public");
             Path    htmlParent = indexHtml.getParent();
@@ -887,34 +1120,67 @@ public class MainController {
                 throw new Exception("Broken asset references in " + indexHtml.getFileName()
                         + ":\n" + missing);
             }
-            updateUI("✅ All asset references resolved.");
+            updateUI("    All asset references resolved.");
         } else {
-            updateUI("✅ Server-side rendered Node.js project (EJS/Pug/HBS) — no static index.html required.");
+            updateUI("    Server-side rendered Node.js project (EJS/Pug/HBS)     no static index.html required.");
         }
 
         Path packageJson = Paths.get(projectPath, "package.json");
         if (Files.exists(packageJson)) {
-            updateUI("📦 Node.js project detected. Running npm install...");
+            updateUI("     Node.js project detected. Running npm install...");
             boolean isWindows = System.getProperty("os.name").toLowerCase().contains("win");
             if (isWindows) {
                 runCmd(projectPath, "cmd", "/c", "npm", "install");
             } else {
                 runCmd(projectPath, "npm", "install");
             }
-            updateUI("✅ npm install complete.");
-            updateUI("▶️  To run: cd " + projectPath + " && npm start");
+            updateUI("    npm install complete.");
+            updateUI("        To run: cd " + projectPath + " && npm run dev (or npm start)");
         }
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    private void autoStartWebServer(String projectPath, String projectType) {
+        try {
+            boolean isWindows = System.getProperty("os.name").toLowerCase().contains("win");
+            Path packageJson = Paths.get(projectPath, "package.json");
+            
+            if (Files.exists(packageJson)) {
+                updateUI("     Auto-starting Node/React server...");
+                
+                String pkgContent = Files.readString(packageJson);
+                String scriptToRun = pkgContent.contains("\"dev\":") ? "npm run dev" : "npm start";
+
+                if (isWindows) {
+                    new ProcessBuilder("cmd", "/c", "start", "cmd", "/k", scriptToRun)
+                        .directory(new File(projectPath))
+                        .start();
+                } else {
+                    new ProcessBuilder("sh", "-c", scriptToRun + " &")
+                        .directory(new File(projectPath))
+                        .start();
+                }
+            } else if (projectType.equals(TYPE_WEB)) {
+                // Static HTML site
+                File indexFile = new File(projectPath, "index.html");
+                if (indexFile.exists()) {
+                    updateUI("     Opening static index.html in browser...");
+                    Desktop.getDesktop().browse(indexFile.toURI());
+                }
+            }
+        } catch (Exception e) {
+            updateUI("       Could not auto-start web server: " + e.getMessage());
+        }
+    }
+
+    //                                                                                                                                                                                                                            
     // Java DevOps pipeline
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     private void runJavaPipeline(String folderName, String projectPath, String code,
                                  DatabaseConnection db, GeminiService gemini, int projectId)
             throws Exception {
 
         if (code == null || code.isEmpty()) {
-            updateUI("\n⚠️ No code to build."); return;
+            updateUI("\n       No code to build."); return;
         }
 
         String  currentCode = code;
@@ -928,38 +1194,39 @@ public class MainController {
             final int fa = attempt;
             try {
                 if (mainClass == null) {
-                    updateUI("\n🔎 [Repair] No main class. Asking AI...");
+                    updateUI("\n     [Repair] No main class. Asking AI...");
                     String fix = askAgentResilient(gemini, "CODER",
                             "No 'public static void main' found. Add an entry point and return "
                             + "COMPLETE [FILE: Name.java]...[ENDFILE] blocks.",
                             currentCode);
                     if (fix.contains("[FILE:")) {
-                        extractAndCreateFiles(fix, folderName);
+                        extractAndCreateFiles(fix, projectPath, TYPE_JAVA);
                         mainClass   = findMainClass(fix);
                         currentCode = fix;
                     }
                     if (mainClass == null) {
-                        updateUI("⚠️ Still no main class. Aborting."); break;
+                        updateUI("       Still no main class. Aborting."); break;
                     }
                 }
 
-                updateUI("\n⚙️ [DevOps] Build attempt " + fa + "...");
-                runDevOpsPipeline(folderName, mainClass);
+                updateUI("\n       [DevOps] Build attempt " + fa + "...");
+                runDevOpsPipeline(projectPath, mainClass);
                 success = true;
-                updateUI("✅ Build complete on attempt " + attempt + ".");
+                updateUI("    Build complete on attempt " + attempt + ".");
 
             } catch (Exception buildError) {
                 if (attempt >= maxAttempts) {
-                    updateUI("\n❌ Max repair attempts reached. Build failed.");
+                    updateUI("\n    Max repair attempts reached. Build failed.");
                     throw buildError;
                 }
-                updateUI("\n🔧 [Repair] Build failed. Analyzing error...");
+                updateUI("\n     [Repair] Build failed. Analyzing error...");
 
                 String projectCtx   = getProjectFilesContext(projectPath);
                 String repairContext =
                     "ERROR LOGS:\n" + buildError.getMessage() + "\n\n"
                     + "CURRENT FILES (Full Structure):\n" + projectCtx + "\n\n"
                     + "FIX RULES:\n"
+                    + "- If the error is 'package does not exist' for a third-party library, YOU MUST REMOVE the import and rewrite the code using standard built-in Java libraries (e.g., standard javax.swing). We do NOT use Maven/Gradle.\n"
                     + "- Maintain EXACTLY the same directory and package structure as shown in CURRENT FILES.\n"
                     + "- Use [FILE: path/to/FileName.java] tags with the relative path from the project root.\n"
                     + "- Always use Java Swing for GUI fixes.\n"
@@ -985,15 +1252,15 @@ public class MainController {
                 if (repairCode.startsWith("AI communication failed")
                         && !repairCode.contains("429")
                         && !repairCode.contains("quota")) {
-                    updateUI("⚠️ Non-retryable AI error. Aborting."); break;
+                    updateUI("       Non-retryable AI error. Aborting."); break;
                 }
                 if (!repairCode.contains("[FILE:")) {
-                    updateUI("⚠️ [Repair Guard]: No file blocks. Retrying with existing files...");
+                    updateUI("       [Repair Guard]: No file blocks. Retrying with existing files...");
                     continue;
                 }
                 db.saveMessage(projectId, "REPAIR_" + attempt, repairCode);
-                if (extractAndCreateFiles(repairCode, folderName)) {
-                    updateUI("\n🛠️ [Repair Applied]: Retrying build...");
+                if (extractAndCreateFiles(repairCode, projectPath, TYPE_JAVA)) {
+                    updateUI("\n        [Repair Applied]: Retrying build...");
                     currentCode = repairCode;
                     String nm = findMainClass(repairCode);
                     if (nm != null) mainClass = nm;
@@ -1002,9 +1269,9 @@ public class MainController {
         }
     }
 
-    private void runDevOpsPipeline(String folderName, String mainClassName) throws Exception {
-        String basePath = PROJECTS_ROOT + File.separator + folderName;
-        updateUI("\n⚙️ [DevOps] Starting Java Build...");
+    private void runDevOpsPipeline(String absoluteProjectPath, String mainClassName) throws Exception {
+        String basePath = absoluteProjectPath;
+        updateUI("\n       [DevOps] Starting Java Build...");
 
         Path projectDir = Paths.get(basePath);
         StringBuilder sources = new StringBuilder();
@@ -1015,17 +1282,58 @@ public class MainController {
                     .append("\"\n"));
         Files.writeString(projectDir.resolve("sources.txt"), sources.toString());
 
-        updateUI("🔨 Step 1: Compiling...");
+        updateUI("     Step 1: Compiling...");
+        
+        //      [Self-Evolution] Check if we are building Brain AI itself
+        if ("com.forge.aiteam.MainApp".equals(mainClassName) || absoluteProjectPath.contains("Brain - Copy")) {
+            updateUI("     [Self-Evolution] Brain AI detected! Running custom JavaFX build...");
+            boolean isWin = System.getProperty("os.name").toLowerCase().contains("win");
+            if (isWin) {
+                runCmd(basePath, "cmd", "/c", "javac", "--module-path", "javafx-sdk\\lib", 
+                       "--add-modules", "javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.swing", 
+                       "-cp", "lib\\*;javafx-sdk\\lib\\*", "-d", "build\\classes", 
+                       "src\\main\\java\\com\\forge\\aiteam\\*.java");
+                
+                updateUI("    [Self-Evolution] Compilation successful.");
+                
+                // Create restart.bat
+                String bat = "@echo off\n"
+                    + "echo Starting Brain AI...\n"
+                    + "java --module-path \"javafx-sdk\\lib\" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.swing -cp \"build\\classes;lib\\*\" com.forge.aiteam.MainApp\n"
+                    + "pause";
+                Files.writeString(Paths.get(basePath, "restart.bat"), bat);
+                
+                // Log to CHANGELOG_BRAIN.md
+                try {
+                    Path changelog = Paths.get(basePath, "CHANGELOG_BRAIN.md");
+                    String date = java.time.LocalDate.now().toString();
+                    String logEntry = "\n## [Self-Evolution Update] — " + date + "\n### Changed\n- Autonomous update applied via Brain AI UI.\n### Agent responsible\n- CoderAgent via self-improvement loop\n";
+                    Files.writeString(changelog, logEntry, java.nio.file.StandardOpenOption.CREATE, java.nio.file.StandardOpenOption.APPEND);
+                    updateUI("     [Self-Evolution] Logged update to CHANGELOG_BRAIN.md");
+                } catch (Exception ignored) {}
+
+                updateUI("     [Self-Evolution] Created restart.bat. Auto-launching the new version!");
+                try {
+                    new ProcessBuilder("cmd", "/c", "start", "restart.bat")
+                        .directory(new File(basePath))
+                        .start();
+                } catch (Exception launchEx) {
+                    updateUI("     [Self-Evolution] Could not auto-launch. Please run restart.bat manually.");
+                }
+                return; // Done
+            }
+        }
+
         runCmd(basePath, "javac", "@sources.txt");
-        updateUI("✅ Compilation successful.");
+        updateUI("    Compilation successful.");
 
         Files.createDirectories(projectDir.resolve("libs"));
-        updateUI("🔨 Step 2: Creating JAR...");
+        updateUI("     Step 2: Creating JAR...");
         runCmd(basePath, "jar", "cfe", "libs/App.jar", mainClassName, ".");
-        updateUI("📦 JAR created: libs/App.jar");
+        updateUI("     JAR created: libs/App.jar");
 
         boolean isWindows = System.getProperty("os.name").toLowerCase().contains("win");
-        updateUI("🔨 Step 3: Generating native app...");
+        updateUI("     Step 3: Generating native app...");
 
         List<String> jpkgArgs = new ArrayList<>(Arrays.asList(
             "jpackage",
@@ -1037,15 +1345,14 @@ public class MainController {
         if (isWindows) jpkgArgs.add("--win-console");
 
         runCmd(basePath, jpkgArgs.toArray(new String[0]));
-        updateUI("🚀 Native application generated.");
+        updateUI("     Native .exe application generated inside AI_App folder.");
     }
 
-    // ─────────────────────────────────────────────────────────────────────────
+    //                                                                                                                                                                                                                            
     // Utilities
-    // ─────────────────────────────────────────────────────────────────────────
-    private boolean extractAndCreateFiles(String aiOutput, String projectName) throws Exception {
-        String basePathStr = PROJECTS_ROOT + File.separator + projectName;
-        Path   basePath    = Paths.get(basePathStr).toAbsolutePath().normalize();
+    //                                                                                                                                                                                                                            
+    private boolean extractAndCreateFiles(String aiOutput, String targetDirectoryPath, String projectType) throws Exception {
+        Path   basePath    = Paths.get(targetDirectoryPath).toAbsolutePath().normalize();
         
         Pattern pattern = Pattern.compile("\\[FILE:\\s*(.*?)\\](.*?)\\[ENDFILE\\]", Pattern.DOTALL);
         Matcher matcher = pattern.matcher(aiOutput);
@@ -1063,9 +1370,11 @@ public class MainController {
                                      .replaceAll("(?i)```$", "");
 
             // 2. Normalize path and strip common prefixes added by confused agents
-            String filePath = originalPath.replace("src/main/java/", "")
-                                          .replace("src/", "")
-                                          .replace("\\", "/");
+            String filePath = originalPath.replace("\\", "/");
+            if (TYPE_JAVA.equals(projectType)) {
+                filePath = filePath.replace("src/main/java/", "")
+                                   .replace("src/", "");
+            }
 
             // 3. Package-Aware Path Correction for Java files
             if (filePath.endsWith(".java")) {
@@ -1079,7 +1388,7 @@ public class MainController {
                     if (!filePath.startsWith(pkgPath)) {
                         String oldPath = filePath;
                         filePath = pkgPath + "/" + fileName;
-                        updateUI("🔧 [Auto-Correct] Fixed directory for " + fileName + " (mapped package '" + pkg + "' to '" + pkgPath + "')");
+                        updateUI("     [Auto-Correct] Fixed directory for " + fileName + " (mapped package '" + pkg + "' to '" + pkgPath + "')");
                     }
                 }
             }
@@ -1088,15 +1397,49 @@ public class MainController {
             
             // 4. Security Guard: Prevent writing outside project boundaries (Path Traversal)
             if (!fullPath.startsWith(basePath)) {
-                updateUI("🛑 [Security] Blocked attempt to write outside project root: " + originalPath);
+                updateUI("     [Security] Blocked attempt to write outside project root: " + originalPath);
                 continue;
+            }
+
+            // Hard check against DatabaseConnection.java
+            if (filePath.endsWith("DatabaseConnection.java")) {
+                updateUI("     [Security Guard] Blocked modification of DatabaseConnection.java as per constraints.");
+                continue;
+            }
+
+            // 5. Human-in-the-Loop Deletion Guard
+            boolean isProtected = filePath.endsWith(".java") || filePath.startsWith("src/") || filePath.startsWith("lib/") || filePath.equals("BRAIN_AI_CONTEXT.md");
+            if (Files.exists(fullPath) && isProtected) {
+                java.util.concurrent.CompletableFuture<Boolean> approval = new java.util.concurrent.CompletableFuture<>();
+                final String displayPath = filePath;
+                Platform.runLater(() -> {
+                    Alert alert = new Alert(Alert.AlertType.CONFIRMATION);
+                    alert.setTitle("⚠️ DELETION REQUESTED — HUMAN APPROVAL REQUIRED");
+                    alert.setHeaderText("You are about to modify/overwrite:\n  → " + displayPath);
+                    alert.setContentText("Reason given by agent: Agent is applying an update.\n\nAre you absolutely sure? This cannot be undone.");
+                    
+                    ButtonType btnYes = new ButtonType("YES, DELETE/OVERWRITE IT", ButtonBar.ButtonData.OK_DONE);
+                    ButtonType btnNo = new ButtonType("NO, KEEP IT", ButtonBar.ButtonData.CANCEL_CLOSE);
+                    alert.getButtonTypes().setAll(btnYes, btnNo);
+                    
+                    java.util.Optional<ButtonType> res = alert.showAndWait();
+                    approval.complete(res.isPresent() && res.get() == btnYes);
+                });
+                try {
+                    if (!approval.get()) {
+                        updateUI("     [Guard] Modification of " + filePath + " aborted by user.");
+                        continue;
+                    }
+                } catch (Exception e) {
+                    continue;
+                }
             }
 
             Files.createDirectories(fullPath.getParent());
             Files.writeString(fullPath, fileContent);
-            updateUI("📄 Created: " + fullPath);
+            updateUI("     Created/Updated: " + fullPath);
         }
-        if (!found) updateUI("⚠️ No [FILE] tags detected in the AI output.");
+        if (!found) updateUI("       No [FILE] tags detected in the AI output.");
         return found;
     }
 
@@ -1115,7 +1458,7 @@ public class MainController {
             String  found = mCls.find()
                     ? pkg + mCls.group(1).trim()
                     : pkg + fileName.replace(".java", "");
-            updateUI("🔎 Entry point: " + found);
+            updateUI("     Entry point: " + found);
             return found;
         }
         return null;
@@ -1139,9 +1482,11 @@ public class MainController {
                 .filter(Files::isRegularFile)
                 .filter(p -> {
                     String n = p.toString().toLowerCase();
-                    return n.endsWith(".java") || n.endsWith(".html")
-                        || n.endsWith(".css")  || n.endsWith(".js")
-                        || n.endsWith(".json");
+                    return n.endsWith(".java") || n.endsWith(".html") || n.endsWith(".css") 
+                        || n.endsWith(".js")   || n.endsWith(".json") || n.endsWith(".jsx") 
+                        || n.endsWith(".xml")  || n.endsWith(".fxml") || n.endsWith(".bat")
+                        || n.endsWith(".md")   || n.endsWith(".properties") || n.endsWith(".sh")
+                        || n.endsWith(".txt");
                 })
                 .forEach(p -> {
                     try {
@@ -1155,7 +1500,7 @@ public class MainController {
     }
 
     private String runCmd(String directory, String... command) throws Exception {
-        updateUI("💻 [System] Running: " + String.join(" ", command));
+        updateUI("     [System] Running: " + String.join(" ", command));
         ProcessBuilder pb = new ProcessBuilder(command);
         pb.directory(new File(directory));
         pb.redirectErrorStream(true);
